[gd_scene load_steps=6 format=3 uid="uid://b273n4ww70bc2"]

[ext_resource type="Script" uid="uid://t00g3xaitfb7" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="PackedScene" uid="uid://c4comlj3r34hu" path="res://hearts.tscn" id="3_8sq4i"]
[ext_resource type="Theme" uid="uid://ciq7v36h25hm0" path="res://creeps-theme.tres" id="3_640wx"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme = ExtResource("3_640wx")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_640wx")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 99
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_640wx")
theme_override_font_sizes/font_size = 72
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hearts" parent="." instance=ExtResource("3_8sq4i")]
position = Vector2(420, 35)

[node name="HighScore" type="Label" parent="."]
offset_top = 9.0
offset_right = 154.0
offset_bottom = 72.0
theme = ExtResource("3_640wx")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 34
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
